--- a/views/item.handlebars
+++ b/views/item.handlebars
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="row">
+{{!--   <div class="row">
           <div class="col-xs-10 offset-xs-1">
             <ul>
               {{#each comment}}
@@ -81,7 +81,8 @@
               {{/each}}
             </ul>
           </div>
-        </div>
+        </div>   ///// This section would populate the comments section if we want it --}}
+
       </div> <!-- end infoCol -->
 
     </div> <!-- end main container row -->
