--- a/public/assets/css/ML.css
+++ b/public/assets/css/ML.css
@@ -24,7 +24,7 @@ body {
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background-color: #87FFB9;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -33,12 +33,19 @@ body {
 
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
+    background-color: #87FFB9;
 }
 
 #page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
+    padding-right: 45px;
+    background-image: url('../img/natBack1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#subHeader {
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -55,6 +62,7 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
+    background-color: #87FFB9;
 }
 
 .sidebar-nav li {
@@ -63,15 +71,18 @@ body {
 }
 
 .sidebar-nav li a {
+    font-family: 'Yantramanav', sans-serif;
+    font-size: 18px;
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #fff;
+
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    color: #D3FFE6;
+    background: #6CCC94;
 }
 
 .sidebar-nav li a:active,
@@ -81,45 +92,84 @@ body {
 
 .sidebar-nav > .sidebar-brand {
     height: 65px;
-    font-size: 18px;
+    font-size: 25px;
     line-height: 60px;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
+    color: #fff;
+    font-family: 'Courgette', cursive;
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
+    color: #6CCC94;
     background: none;
+}
+
+header {
+    font-family: 'Courgette', cursive;
+    font-size: 85px;
+    background-color: #fff;
+    padding-left: 15%;
+    border-radius: 10px;
+    opacity: 0.7;
+    margin-bottom: 5%;
+}
+
+#undLine {
+    height: 20px;
 }
 
 
 /*  Item Page Styling  */
+#jumbo {
+    margin-right: 15%;
+    background-color: #D3FFE6;
+    font-family: 'Yantramanav', sans-serif;
+}
+
+#itemNameH, #posterNameH, #longDescriptionP {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 2%;
+}
 #itemNameH {
 
 }
 
 #posterNameH {
-
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 #longDescriptionP {
-
+    margin-bottom: 3%;
 }
 
 #mainPicDiv {
-
+    border: solid 2px #87FFB9;
+    border-radius: 15px;
+    height: 180px;
+    width: 180px;
 }
 
+#pic3Div {
+    margin-left: 4%;
+    margin-right: 4%;
+}
 #pic2Div, #pic3Div, #pic4Div {
     border: solid 2px #87FFB9;
     border-radius: 15px;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 80px;
+    margin-top: 4%;
+    margin-bottom: 4%;
 }
 
-
+#purchase {
+    margin: auto;
+    background-color: #58CCCA;
+}
 
 
 /*  Media Queries  */
