--- a/test/assets/css/ML.css
+++ b/test/assets/css/ML.css
@@ -176,7 +176,8 @@ header {
     margin-left: 5%;
 }
 #purchase {
-    background-color: #58CCCA;
+    background-color: #ggg;
+   /* background-color: #58CCCA;*/
 }
 
 
