pushing prior to switching to master to grab Mary's new seeder doc

--- a/test/assets/css/ML.Mary.css
+++ b/test/assets/css/ML.Mary.css
@@ -124,7 +124,7 @@ header {
 
 /*  Item Page Styling  */
 #jumbo {
-    margin-right: 15%;
+/*    margin-right: 15%;*/
     background-color: #D3FFE6;
     font-family: 'Yantramanav', sans-serif;
 }
