--- a/views/itemA.handlebars
+++ b/views/itemA.handlebars
@@ -11,77 +11,6 @@
               <a href="/">Home</a>
           </li>
           <li>
-              <a href="/list">Available Items</a>
-          </li>
-          <li>
-              <a href="/post">Post an Item</a>
-          </li>
-          <li class="disabled" aria-disabled="true">
-              <a href="#">About</a>
-          </li>
-          <li class="disabled" aria-disabled="true">
-              <a href="#">Donate</a>
-          </li>
-          <li class="disabled" aria-disabled="true">
-              <a href="#">Contact</a>
-          </li>
-      </ul>
-  </div>
-
-  <main id="page-content-wrapper">
-    <div class="container-fluid">
-      <header>
-        <p><span style="font-size: 85px">M</span>ISSING <span style="font-size: 85px">L</span>INKS</p>
-        <p id="undLine"><span style="font-size: 85px">____________________________</span></p>
-      </header>
-
-      <div class="row">
-
-        <div class="col-xs-4" id="picCol">
-          <div class="row">
-            <div class="col-xs-10 offset-xs-1">
-              {{this.mainPic}}
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-2 offset-xs-2">
-              {{this.pic2}}
-            </div>
-            <div class="col-xs-2 offset-xs-1">
-              {{this.pic3}}
-            </div>
-            <div class="col-xs-2 offset-xs-1">
-              {{this.pic4}}
-            </div>
-          </div>
-        </div> <!-- end picCol -->
-
-        <div class="col-xs-8" id="infoCol">
-          <div class="row">
-            <div class="jumbotron">
-              <h2 id="itemNameH"> {{this.itemName}} </h2>
-              <h3 id="posterNameH"> {{this.posterName}} </h3>
-              <p class="lead" id="longDescriptionP"> {{this.longDescription}} </p>
-              <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Purchase</a>
-              </p>
-              <hr class="my-2">
-            </div>
-          </div>
-
-<div id="wrapper">
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-          <li class="sidebar-brand">
-              <a href="/">
-                  MissingLinks
-              </a>
-          </li>
-          <li>
-              <a href="/">Home</a>
-          </li>
-          <li>
               <a href="/listA">Available Items</a>
           </li>
           <li>
@@ -143,26 +72,12 @@
                 You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.
               </p>
               <p class="lead">
-                <h3 class="priceB">$54.50</h3>
+                <h3 class="priceB">{{this.price}}</h3>
                 <a class="btn btn-primary btn-lg priceB" href="#" role="button" id="purchase">Purchase</a>
               </p>
               <!-- <hr class="my-2"> -->
             </div>
           </div>
-
-  <!--   <div class="row">
-            <div class="col-xs-10 offset-xs-1">
-              <ul>
-                {{#each comment}}
-                  <li>
-                    <h3 id="posterNameH"> {{this.commentPoster}} </h3>
-                    <hr style="color:gray">
-                    <h4> {{this.commentText}} </h4>
-                  </li>
-                {{/each}}
-              </ul>
-            </div>
-          </div>   ///// This section would populate the comments section if we want it -->
 
         </div> <!-- end infoCol -->
 
