--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css?family=Jomhuria|Limelight|Oleo+Script|Sansita+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Courgette|Yantramanav" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
 		<script type="text/javascript" src="/assets/js/item.js"></script>
 		<link rel="stylesheet" href="/assets/css/ML.css" type="text/css" />
